fixed the landing page - display the entire image and add spacing to the bottom

--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@
     font-weight: 900;
   }
 }
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -56,7 +57,7 @@ section{
 
 h1 {
   font-size: 105px;
-  line-height: 1.1;
+  line-height: .8em;
 }
 
 button {
@@ -72,6 +73,11 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+.padding{
+  width: 75%;
+  display: flex;
+  margin:0 auto;
 }
 
 @media (prefers-color-scheme: light) {
